--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ body {
 
 body::-webkit-scrollbar {
     display: none;
-  }
+}
+
+
 
 .contentBox {
     display: flex;
@@ -60,6 +62,12 @@ h2, h3 {
 
 img {
     width: 70%;
+}
+
+@media (pointer:none), (pointer:coarse) {
+    img {
+        width: 100%;
+    }
 }
 
 #bottom {
